# sharemarket

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: accessories.py  auth.py  billing.py  bookings.py  dashboard.py  delivery.py  exchange.py  finance.py  followups.py  insurance.py  leads.py  pdi.py  quotations.py  requirements.py  routes.py  test_drives.py  trading.py  users.py  vehicles.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  crm.py  trading.py
backend/app/schemas/: __init__.py  crm.py  trading.py
backend/app/services/: __init__.py  angel_client.py  crm_service.py  indicator_engine.py  market_data.py  signal_engine.py  trading_service.py
backend/app/ws/: manager.py
backend/tests/: test_signal_engine.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/accessories/: page.tsx
frontend/src/app/billing/: page.tsx
frontend/src/app/bookings/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/deliveries/: page.tsx
frontend/src/app/exchange/: page.tsx
frontend/src/app/finance/: page.tsx
frontend/src/app/followups/: page.tsx
frontend/src/app/insurance/: page.tsx
frontend/src/app/leads/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/pdi/: page.tsx
frontend/src/app/team/: page.tsx
frontend/src/components/: Layout.tsx  MarketOverview.tsx  Portfolio.tsx  PriceChart.tsx  SignalPanel.tsx  TradingPanel.tsx  Watchlist.tsx
frontend/src/lib/: api.ts
frontend/src/types/: crm.ts  trading.ts
infra/: schema.sql
(+3 files in other folders)
