[project]
name = "intraday-trader-backend"
version = "0.1.0"
description = "FastAPI backend for AI intraday trading assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "redis>=5.0.4",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "ta>=0.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.4.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
